@@ -428,6 +428,7 @@ XCSOAR_SOURCES += \
 	$(SRC)/Java/Global.cpp \
 	$(SRC)/Device/AndroidBluetoothPort.cpp \
 	$(SRC)/Android/InternalGPS.cpp \
+	$(SRC)/Android/SoundUtil.cpp \
 	$(SRC)/Android/TextUtil.cpp \
 	$(SRC)/Android/Timer.cpp \
 	$(SRC)/Android/EventBridge.cpp \
