@@ -23,6 +23,7 @@ Copyright_License {
 
 #include "Android/Main.hpp"
 #include "Android/NativeView.hpp"
+#include "Android/SoundUtil.hpp"
 #include "Screen/Fonts.hpp"
 #include "Screen/Graphics.hpp"
 #include "Screen/Android/Event.hpp"
@@ -45,6 +46,8 @@ NativeView *native_view;
 
 EventQueue *event_queue;
 
+SoundUtil *sound_util;
+
 JNIEXPORT jboolean JNICALL
 Java_org_xcsoar_NativeView_initializeNative(JNIEnv *env, jobject obj,
                                             jint width, jint height)
@@ -62,6 +65,8 @@ Java_org_xcsoar_NativeView_initializeNative(JNIEnv *env, jobject obj,
   Profile::SetFiles(_T(""));
 
   event_queue = new EventQueue();
+
+  sound_util = new SoundUtil(env);
 
   return XCSoarInterface::Startup(NULL);
 }
@@ -82,6 +87,7 @@ Java_org_xcsoar_NativeView_deinitializeNative(JNIEnv *env, jobject obj)
   CommonInterface::main_window.reset();
   Fonts::Deinitialize();
   Graphics::Deinitialise();
+  delete sound_util;
   delete event_queue;
   delete native_view;
 }
