@@ -19,6 +19,7 @@ Version 6.0.9 - not yet released
   - "Droid Sans" is the default Android font
   - enable font preview
   - dead hardware keys fixed
+  - implement sound effects
 
 Version 6.0.8 - 2011/03/23
 * don't estimate thermal source for skewed thermals
